--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
